# pandas-aiohttp

./: LICENSE.txt  pyproject.toml  readme.md
.github/workflows/: publish_to_pypi.yml
src/pandas_aiohttp/: __init__.py
tests/: test_get.py
